@@ -20,7 +20,7 @@ static const u32   DGST_POS2      = 2;
 static const u32   DGST_POS3      = 3;
 static const u32   DGST_SIZE      = DGST_SIZE_4_32;
 static const u32   HASH_CATEGORY  = HASH_CATEGORY_FDE;
-static const char *HASH_NAME      = "TrueCrypt SHA512 + XTS 512 bit";
+static const char *HASH_NAME      = "TrueCrypt SHA512 + XTS 512 bit (legacy)";
 static const u64   KERN_TYPE      = 6221;
 static const u32   OPTI_TYPE      = OPTI_TYPE_ZERO_BYTE
                                   | OPTI_TYPE_SLOW_HASH_SIMD_LOOP
